--- a/index.html
+++ b/index.html
@@ -9,26 +9,25 @@
 		<script src="https://rawgit.com/Microsoft/TypeScript/master/lib/typescriptServices.js"></script>
 		<script src="https://rawgit.com/basarat/typescript-script/master/transpiler.js"></script>
 		<!-- vuejs 
+		-->
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.css'>
 		<link rel="stylesheet" href='https://vuejs-tips.github.io/vue-the-mask/css/app.84709d0f.css'>
 		<link rel='styesheet' href='https://vuejs-tips.github.io/vue-the-mask/css/app.84709d0f.css'>
 		<link rel='stylesheet' href='css/st-common-vue.css' async defer>
-		-->
 		<!-- boostrap 
-		-->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 		<link rel='stylesheet' href='css/st-common-boostrap.css' async defer>
+		-->
 
-		<script src='dist/UiUtil.js' async defer></script>
-		<link rel='stylesheet' href='css/st-common.css' async defer>
-		<script src='dist/index.js' async defer></script>
+		<script src='dist/UiUtil.js' defer></script>
+		<link rel='stylesheet' href='css/st-common.css' defer>
+		<script src='dist/index.js' defer></script>
 		<style>
 		</style>
 	</head>
 	<body>
 		<div class='ui form'>
 			<div class="inline field">
-				<label>US Zip</label>
 				<div id='idTest'></div>
 			</div>
 		</div>
