--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 		<title></title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<script src="https://rawgit.com/Microsoft/TypeScript/master/lib/typescriptServices.js"></script>
-		<script src="https://rawgit.com/basarat/typescript-script/master/transpiler.js"></script>
 		<!-- vuejs 
 		-->
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.css'>
@@ -18,7 +16,6 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 		<link rel='stylesheet' href='css/st-common-boostrap.css' async defer>
 		-->
-
 		<script src='dist/UiUtil.js' defer></script>
 		<link rel='stylesheet' href='css/st-common.css' defer>
 		<script src='dist/index.js' defer></script>
@@ -26,11 +23,20 @@
 		</style>
 	</head>
 	<body>
-		<div class='ui form'>
+		<div class='ui form' style='margin-top: 50px'>
 			<div class="inline field">
 				<div id='idTest'></div>
 			</div>
 		</div>
+
+		<!-- tooltip 
+		<span class="tooltip bottom">
+			<span class='info-icon'>i</span>
+			<span class="tooltip-inner">bottom long information testing will it wrap
+				<span class="tooltip-angle"><span class="tooltip-angle-inner"></span></span>
+			</span>
+		</span>
+		-->
 	</body>
 	<script></script>
 </html>
